--- a/webhooks-framework-data/pom.xml
+++ b/webhooks-framework-data/pom.xml
@@ -1,7 +1,8 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<artifactId>spring-webhooks-framework</artifactId>
+	<groupId>de.syslord.microservices.webhooks</groupId>
+	<artifactId>spring-webhooks-framework-data</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 
 	<properties>
@@ -17,7 +18,6 @@
 	</parent>
 
 	<dependencies>
-
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
@@ -30,30 +30,19 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-security</artifactId>
 		</dependency>
-
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-hystrix</artifactId>
 			<version>1.3.0.RELEASE</version>
 		</dependency>
-
 		<dependency>
 			<groupId>com.google.guava</groupId>
 			<artifactId>guava</artifactId>
 			<version>19.0</version>
-		</dependency>
-
-		<dependency>
-			<groupId>io.springfox</groupId>
-			<artifactId>springfox-swagger2</artifactId>
-			<!-- <version>2.4.0</version> -->
-			<version>2.6.1</version>
-		</dependency>
-		<dependency>
-			<groupId>io.springfox</groupId>
-			<artifactId>springfox-swagger-ui</artifactId>
-			<!-- <version>2.4.0</version> -->
-			<version>2.6.1</version>
 		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
@@ -68,6 +57,11 @@
 			<scope>test</scope>
 		</dependency>
 
+		<dependency>
+			<groupId>de.syslord.microservices.webhooks</groupId>
+			<artifactId>spring-webhooks-framework</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 
 	<build>
@@ -78,5 +72,4 @@
 		</plugins>
 
 	</build>
-	<groupId>de.syslord.microservices.webhooks</groupId>
 </project>
